--- a/index.html
+++ b/index.html
@@ -10,37 +10,59 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <header>
         <nav class="navbar navbar-expand-lg bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="./assets/duck.png" alt="logo" width="50px" height="50px">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon btn btn-light"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Catalogo Libri</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white-50" href="#">Anagrafica Utenti</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Storico Prestiti
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled text-white-50" aria-disabled="true">Help</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="./assets/duck.png" alt="logo" width="50px" height="50px">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon btn btn-light"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active text-white" aria-current="page" href="#">Catalogo Libri</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white-50" href="#">Anagrafica Utenti</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Storico Prestiti
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled text-white-50" aria-disabled="true">Help</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+                <button class="btn btn-outline-light" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
     </header> 
-    </body>
+    <main>
+      <div class="container"> 
+        <div class="row">
+          <div class="col-6 col-lg-5 mt-3">
+            <h3>Catalogo Libri</h3>
+          </div>
+          <div class="col-6 col-lg-5 mt-3 text-end">
+            <span><button type="button" class="btn btn-primary">Aggiungi Libro </button></span>
+          </div>
+          <table class="table table-striped mt-3">
+            <thead>
+              <th>Titolo</th>
+              <th>Stato</th>
+              <th class="d-none d-md-block">Data prestito</th>
+              <th>Azioni</th>
+            </thead>
+  
+          </table>
+
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
