--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
   <body>
@@ -54,11 +55,25 @@
           <table class="table table-striped mt-3">
             <thead>
               <th>Titolo</th>
-              <th>Stato</th>
               <th class="d-none d-md-block">Data prestito</th>
+              <th>Stato</th>
               <th>Azioni</th>
             </thead>
-  
+            <tbody>
+              <td>I pilastri della terra</td>
+              <td class="d-none d-md-table-cell">-</td>
+              <td>
+                <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+              </td>
+              <td>
+                <button class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </button>
+                <button class="btn btn-outline-secondary">
+                  <i class="bi bi-trash-fill"></i>
+                </button>
+              </td>
+            </tbody>
           </table>
 
         </div>
