--- a/index.html
+++ b/index.html
@@ -60,19 +60,186 @@
               <th>Azioni</th>
             </thead>
             <tbody>
-              <td>I pilastri della terra</td>
-              <td class="d-none d-md-table-cell">-</td>
-              <td>
-                <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
-              </td>
-              <td>
-                <button class="btn btn-outline-secondary">
-                  <i class="bi bi-pencil-fill"></i>
-                </button>
-                <button class="btn btn-outline-secondary">
-                  <i class="bi bi-trash-fill"></i>
-                </button>
-              </td>
+              <tr>
+                <td>I pilastri della terra</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>I promessi sposi</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>Il signore degli anelli</td>
+                <td class="d-none d-md-table-cell">18/10/2023</td>
+                <td>
+                  <span class="bg-warning text-white rounded-3 p-1">In prestito</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>Harry Potte e la pietra filosofale</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>Il codice Da Vinci</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-danger text-white rounded-3 p-1">Non disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>Shining</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>La divina commedia</td>
+                <td class="d-none d-md-table-cell">21/09/2023</td>
+                <td>
+                  <span class="bg-warning text-white rounded-3 p-1">In prestito</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>Il trono di spade</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>Il mostro di Sofia</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-danger text-white rounded-3 p-1">Non disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                <td class="d-none d-md-table-cell">25/07/2023</td>
+                <td>
+                  <span class="bg-warning text-white rounded-3 p-1">In prestito</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>Il piccolo principe</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
+              <tr>
+                <td>La storia infinita</td>
+                <td class="d-none d-md-table-cell">-</td>
+                <td>
+                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                </td>
+                <td>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                  </button>
+                </td>
+              </tr>
             </tbody>
           </table>
 
