--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="col-6 col-lg-5 mt-3 text-end">
             <span><button type="button" class="btn btn-primary">Aggiungi Libro </button></span>
           </div>
-          <table class="table table-striped mt-3">
+          <table class="table table-striped mt-3 col-12 col-md-12 col-lg-10">
             <thead>
               <th>Titolo</th>
               <th class="d-none d-md-block">Data prestito</th>
@@ -64,7 +64,7 @@
                 <td>I pilastri della terra</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                  <span class="badge text-bg-success">Disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -79,7 +79,7 @@
                 <td>I promessi sposi</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                  <span class="badge text-bg-success">Disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -94,7 +94,7 @@
                 <td>Il signore degli anelli</td>
                 <td class="d-none d-md-table-cell">18/10/2023</td>
                 <td>
-                  <span class="bg-warning text-white rounded-3 p-1">In prestito</span>
+                  <span class="badge text-bg-warning text-white">In prestito</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -109,7 +109,7 @@
                 <td>Harry Potte e la pietra filosofale</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                  <span class="badge text-bg-success">Disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -124,7 +124,7 @@
                 <td>Il codice Da Vinci</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-danger text-white rounded-3 p-1">Non disponibile</span>
+                  <span class="badge text-bg-danger">Non disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -139,7 +139,7 @@
                 <td>Shining</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                  <span class="badge text-bg-success">Disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -154,7 +154,7 @@
                 <td>La divina commedia</td>
                 <td class="d-none d-md-table-cell">21/09/2023</td>
                 <td>
-                  <span class="bg-warning text-white rounded-3 p-1">In prestito</span>
+                  <span class="badge text-bg-warning text-white">In prestito</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -169,7 +169,7 @@
                 <td>Il trono di spade</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                  <span class="badge text-bg-success">Disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -184,7 +184,7 @@
                 <td>Il mostro di Sofia</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-danger text-white rounded-3 p-1">Non disponibile</span>
+                  <span class="badge text-bg-danger">Non disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -199,7 +199,7 @@
                 <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
                 <td class="d-none d-md-table-cell">25/07/2023</td>
                 <td>
-                  <span class="bg-warning text-white rounded-3 p-1">In prestito</span>
+                  <span class="badge text-bg-warning text-white">In prestito</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -214,7 +214,7 @@
                 <td>Il piccolo principe</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                  <span class="badge text-bg-success">Disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
@@ -229,7 +229,7 @@
                 <td>La storia infinita</td>
                 <td class="d-none d-md-table-cell">-</td>
                 <td>
-                  <span class="bg-success text-white rounded-3 p-1">Disponibile</span>
+                  <span class="badge text-bg-success">Disponibile</span>
                 </td>
                 <td>
                   <button class="btn btn-outline-secondary">
