--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <main>
       <div class="container"> 
         <div class="row">
-          <div class="col-6 col-lg-5 mt-3">
+          <div class="col-6 col-md-6 col-lg-5 mt-3">
             <h3>Catalogo Libri</h3>
           </div>
-          <div class="col-6 col-lg-5 mt-3 text-end">
+          <div class="col-6 col-md-6 col-lg-5 mt-3 text-end">
             <span><button type="button" class="btn btn-primary">Aggiungi Libro </button></span>
           </div>
           <table class="table table-striped mt-3 col-12 col-md-12 col-lg-10">
@@ -242,7 +242,31 @@
               </tr>
             </tbody>
           </table>
-
+        </div>
+        <div class="row">
+          <div class="card col-12 col-md-12 col-lg-2">
+            <div class="card-header">
+              <h2>Todo</h2>
+            </div>
+            <ul class="list-group list-group-flush border">
+              <li class="list-group-item">
+                <button class="btn">
+                  <i class="bi bi-square"></i>
+                </button>
+                Chiamare segreteria</li>
+              <li class="list-group-item">
+                <button class="btn">
+                  <i class="bi bi-square"></i>
+                </button>
+                Mandare avvisi prestiti scaduti</li>
+              <li class="list-group-item">
+                <button class="btn">
+                  <i class="bi bi-square"></i>
+                </button>
+                Ordinare nuovi libri</li>
+            </ul>
+          </div>
+          
         </div>
       </div>
     </main>
