--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
     </nav>
   </header>
   <main>
-    <div class="container">
+    <div class="container d-flex flex-column flex-lg-row">
       <div class="row">
-        <div class="col-6 col-md-6 col-lg-5 mt-3">
+        <div class="col-6 col-md-6 col-lg-4 mt-3">
           <h3>Catalogo Libri</h3>
         </div>
-        <div class="col-6 col-md-6 col-lg-5 mt-3 text-end">
+        <div class="col-6 col-md-6 col-lg-4 mt-3 text-end flex-grow-1">
           <span><button type="button" class="btn btn-primary">Aggiungi Libro </button></span>
         </div>
-        <table class="table table-striped mt-3 col-12 col-md-12 col-lg-10">
+        <table class="table table-striped mt-3 col-12 col-md-12 col-lg-8">
           <thead>
             <th>Titolo</th>
             <th class="d-none d-md-block">Data prestito</th>
@@ -72,7 +72,7 @@
               <td>
                 <span class="badge text-bg-success">Disponibile</span>
               </td>
-              <td>
+              <td class="text-nowrap">
                 <button class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
                 </button>
@@ -249,8 +249,8 @@
           </tbody>
         </table>
       </div>
-      <div class="row">
-        <div class="card col-12 col-md-12 col-lg-2">
+      <div class="row flex-column">
+        <div class="card col-12 col-md-12 pb-2 mt-3 ms-3">
           <div class="card-header">
             <h2>Todo</h2>
           </div>
@@ -275,7 +275,7 @@
             </li>
           </ul>
         </div>
-        <div class="card col-12 col-md-12 col-lg-2 mt-3 mb-3">
+        <div class="card col-12 col-md-12 mb-3 pb-2 mt-3 ms-3">
           <h2>F.A.Q.</h2>
           <div class="accordion mt-3" id="accordionExample">
             <div class="accordion-item">
