--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
   <header>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="./assets/duck.png" alt="logo" width="50px" height="50px">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon btn btn-light"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -56,8 +56,10 @@
           <h3>Catalogo Libri</h3>
         </div>
         <div class="col-6 col-md-6 col-lg-4 mt-3 text-end flex-grow-1">
-          <span><button type="button" class="btn btn-primary">Aggiungi Libro </button></span>
-        </div>
+          <a href="addbook.html" class="btn btn-primary">
+            <span>Aggiungi Libro</span>
+          </a>
+          </div>
         <table class="table table-striped mt-3 col-12 col-md-12 col-lg-8">
           <thead>
             <th>Titolo</th>
