--- a/addbook.html
+++ b/addbook.html
@@ -35,35 +35,60 @@
             <li class="nav-item">
               <a class="nav-link disabled text-white-50" aria-disabled="true">Help</a>
             </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-            <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
+          </ul> 
         </div>
       </div>
     </nav>
   </header>
   <main>
-    <div class="container mt-3">
+    <form class="container d-flex flex-column mt-3">
         <h1>Nuovo Libro</h1>
-    <div class="container mt-3">
         <div class="row">
             <div class="col-6">
                 <label for="formGroupExampleInput" class="form-label">Nome Autore</label>
                 <input type="text" class="form-control" placeholder="Inserisci il nome dell'autore" aria-label="First name">
             </div>
-            <div class="col-6">
+            <div class="col-6 mb-3">
                 <label for="formGroupExampleInput" class="form-label">Cognome Autore</label>
                 <input type="text" class="form-control" placeholder="Inserisci il nome dell'autore" aria-label="Last name">
             </div>
-            <div class="col-12 mt-2">
+            <div class="col-12 mb-3">
                 <label for="formGroupExampleInput" class="form-label">Titolo</label>
                 <input type="text" class="form-control" placeholder="Inserisci il titolo del libro" aria-label="Last name">
                 <p>Titolo versione italiana</p>
             </div>
+            <div class="col-12 col-lg-4 mb-3">
+                <label for="formGroupExampleInput" class="form-label">Genere</label>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Scegli il genere</option>
+                </select>
+            </div>
+            <div class="col-12 col-lg-4 mb-3">
+                <label for="formGroupExampleInput" class="form-label">Anno di Pubblicazione</label>
+                <input type="text" class="form-control" placeholder="Inserisci il titolo del libro" aria-label="Last name">
+            </div>
+             <div class="col-12 col-lg-4 mb-5">
+                <label for="formGroupExampleInput" class="form-label">ISBN#</label>
+                <input type="text" class="form-control" placeholder="Inserisci il codice ISBN#" aria-label="Last name">
+            </div>
+            <hr>
+            <div class="col-12 mb-3 mt-2">
+                <label for="exampleFormControlTextarea1" class="form-label">Note</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Inserisci eventuali note sul libro"></textarea>
+            </div>
+            <div class="form-check col-12 ms-3">
+                <input class="form-check-input" type="checkbox" value="" id="checkDefault">
+                <label class="form-check-label" for="checkDefault">
+                    Disponibile anche in digitale 
+                </label>
+            </div>
+            <div class="col-12 mt-3">
+                <a href="#" class="btn btn-primary">
+                <span>Aggiungi Libro</span>
+                </a>
+            </div>
         </div>
-    </div>
+    </form>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
